--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -1,8 +1,8 @@
-import Layout from "components/layout"
-import NowHeader from "components/now-header"
-import Seo from "components/seo"
+import Layout from 'components/layout'
+import NowHeader from 'components/now-header'
+import Seo from 'components/seo'
 
-export default ({ children }) => (
+export default ({children}) => (
   <Layout breadcrumb="/now">
     <Seo
       title="Jake Wiesler"
@@ -18,20 +18,20 @@ export default ({ children }) => (
 
 <!-- EDIT THIS CONTENT.  -->
 
-I'm heavily focused on refactoring my personal website from
-Hugo to Gatsby. This is taking up the majority of my focus over the last
-two weeks. There are a number of things involved.
+I'm heavily focused on refactoring my personal website from Hugo to Gatsby. This
+is taking up the majority of my focus over the last two weeks. There are a
+number of things involved.
 
-First, I had a blog over at simplemachine with some great posts that I
-want to port over here.
+First, I had a blog over at simplemachine with some great posts that I want to
+port over here.
 
-Second, I need to make sure I don't break any of the urls I currently
-have on this blog.
+Second, I need to make sure I don't break any of the urls I currently have on
+this blog.
 
 Third, I want to streamline the design.
 
-4, I have new content ideas I want to spec out. With Gatsby I should be
-able to do a lot more.
+4, I have new content ideas I want to spec out. With Gatsby I should be able to
+do a lot more.
 
 <!-- END EDIT THIS CONTENT -->
 
