--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,12 +1,12 @@
-import Layout from "components/layout"
-import Seo from "components/seo"
+import Layout from 'components/layout'
+import Seo from 'components/seo'
 
 ### Feel free to contact me at any time!
 
 - You can reach me on Twitter and Instagram `@jakewies`
 - You can email me at `jakewiesler@gmail.com`
 
-export default ({ children }) => (
+export default ({children}) => (
   <Layout breadcrumb="/contact">
     <Seo title="Jake Wiesler" description="Say hello!" pageUrl="/contact"></Seo>
     <article>{children}</article>
