refactor: update now page

--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -18,20 +18,7 @@ export default ({children}) => (
 
 <!-- EDIT THIS CONTENT.  -->
 
-I'm heavily focused on refactoring my personal website from Hugo to Gatsby. This
-is taking up the majority of my focus over the last two weeks. There are a
-number of things involved.
-
-First, I had a blog over at simplemachine with some great posts that I want to
-port over here.
-
-Second, I need to make sure I don't break any of the urls I currently have on
-this blog.
-
-Third, I want to streamline the design.
-
-4, I have new content ideas I want to spec out. With Gatsby I should be able to
-do a lot more.
+I'm spending about 4 hours each day live coding on Twitch. This is something I've wanted to do for a while, and as of late I have some free time! If you want to check out the streams, you can do so on [my Twitch channel](https://twitch.tv/jakewies), where I go live Monday - Friday at 8:30am to 12:30pm EST.
 
 <!-- END EDIT THIS CONTENT -->
 
