refactor: format now.mdx

--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -18,7 +18,11 @@ export default ({children}) => (
 
 <!-- EDIT THIS CONTENT.  -->
 
-I'm spending about 4 hours each day live coding on Twitch. This is something I've wanted to do for a while, and as of late I have some free time! If you want to check out the streams, you can do so on [my Twitch channel](https://twitch.tv/jakewies), where I go live Monday - Friday at 8:30am to 12:30pm EST.
+I'm spending about 4 hours each day live coding on Twitch. This is something
+I've wanted to do for a while, and as of late I have some free time! If you want
+to check out the streams, you can do so on
+[my Twitch channel](https://twitch.tv/jakewies), where I go live Monday - Friday
+at 8:30am to 12:30pm EST.
 
 <!-- END EDIT THIS CONTENT -->
 
