feat: update header

--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -3,7 +3,7 @@ import NowHeader from 'components/now-header'
 import Seo from 'components/seo'
 
 export default ({children}) => (
-  <Layout breadcrumb="/now">
+  <Layout>
     <Seo
       title="Jake Wiesler"
       description="What I'm doing right now."
