--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -7,7 +7,7 @@ import Seo from 'components/seo'
 - You can email me at `jakewiesler@gmail.com`
 
 export default ({children}) => (
-  <Layout breadcrumb="/contact">
+  <Layout>
     <Seo title="Jake Wiesler" description="Say hello!" pageUrl="/contact"></Seo>
     <article>{children}</article>
   </Layout>
